--- a/lambdas/authentication/package.json
+++ b/lambdas/authentication/package.json
@@ -3,12 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "deploy": "sls deploy"
+    "deploy": "sls deploy",
+    "release": "semantic-release"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
+    "semantic-release": "^22.0.12",
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-python-requirements": "^6.0.1"
   }
