--- a/lambdas/authentication/.releaserc
+++ b/lambdas/authentication/.releaserc
@@ -6,8 +6,7 @@
         "releaseRules": [
           { "type": "feat", "scope": "authentication", "release": "minor" },
           { "type": "fix", "scope": "authentication", "release": "patch" },
-          { "type": "chore", "scope": "authentication", "release": "patch" },
-          { "type": "*", "release": false }
+          { "type": "chore", "scope": "authentication", "release": "patch" }
         ]
       }
     ],
