--- a/lambdas/company/.releaserc.json
+++ b/lambdas/company/.releaserc.json
@@ -7,7 +7,9 @@
           { "type": "feat", "scope": "company", "release": "minor" },
           { "type": "fix", "scope": "company", "release": "patch" },
           { "type": "chore", "scope": "company", "release": "patch" },
-          { "type": "*", "release": false }
+          { "type": "feat", "scope": "!company", "release": false },
+          { "type": "fix", "scope": "!company", "release": false },
+          { "type": "chore", "scope": "!company", "release": false }
         ]
       }
     ],
@@ -19,12 +21,16 @@
           "npmPublish": false
         }
     ],
+    [
+      "@semantic-release/exec",
+      {
+        "generateNotesCmd": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -k ./changelog.config.js"
+      }
+    ],
     "@semantic-release/git",
     "@semantic-release/github"
   ],
   "branches": [
-    "master",
-    "main",
     "staging"
   ],
   "tagFormat": "company-v${version}"
