--- a/lambdas/authorizer/package.json
+++ b/lambdas/authorizer/package.json
@@ -17,6 +17,8 @@
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "conventional-changelog-custom-config": "^0.3.1",
     "semantic-release": "^22.0.12",
     "serverless-deployment-bucket": "^1.6.0"
   }
