--- a/lambdas/position/package.json
+++ b/lambdas/position/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
-    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "semantic-release": "^22.0.12",
     "serverless-deployment-bucket": "^1.6.0"
+  },
+  "devDependencies": {
+    "@semantic-release/exec": "^6.0.3",
+    "conventional-changelog-cli": "^4.1.0",
+    "conventional-changelog-custom-config": "^0.3.1",
+    "semantic-release": "^22.0.12"
   }
 }
