fix(ci): make releases be created sequentially

--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -71,13 +71,55 @@ jobs:
   #       run: |
   #         cd scripts && ./deploy_to_s3.sh --bucket-name ${{ secrets.WEBSITE_BUCKET_NAME }} --environment ${{ env.ENVIRONMENT }}
 
-  create-release:
-    name: Create Release
-    strategy:
-      matrix:
-        component: ['web', 'authentication', 'authorizer', 'checklist', 'company', 'position']
+  create-release-web:
+    name: Create Release (web)
     uses: ./.github/workflows/job-create-release.yml
     with:
-      component: ${{matrix.component}}
+      component: web
+      environment: staging
+    secrets: inherit
+
+  create-release-authentication:
+    name: Create Release (authentication)
+    needs: create-release-web
+    uses: ./.github/workflows/job-create-release.yml
+    with:
+      component: authentication
+      environment: staging
+    secrets: inherit
+
+  create-release-authorizer:
+    name: Create Release (authorizer)
+    needs: create-release-authentication
+    uses: ./.github/workflows/job-create-release.yml
+    with:
+      component: authorizer
+      environment: staging
+    secrets: inherit
+
+  create-release-checklist:
+    name: Create Release (checklist)
+    needs: create-release-authorizer
+    uses: ./.github/workflows/job-create-release.yml
+    with:
+      component: checklist
+      environment: staging
+    secrets: inherit
+
+  create-release-company:
+    name: Create Release (company)
+    needs: create-release-checklist
+    uses: ./.github/workflows/job-create-release.yml
+    with:
+      component: company
+      environment: staging
+    secrets: inherit
+
+  create-release-position:
+    name: Create Release (position)
+    needs: create-release-company
+    uses: ./.github/workflows/job-create-release.yml
+    with:
+      component: position
       environment: staging
     secrets: inherit
