--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -33,43 +33,42 @@ jobs:
             package:
               - 'web/**'
 
-  # TODO: uncomment once staging.matchyaa.com is set
-  # deploy-to-s3:
-  #   name: Deploy to S3
-  #   needs: [cleanup, check-for-web-folder-changes]
-  #   if: needs.check-for-web-folder-changes.outputs.package_changed == 'true'
-  #   runs-on: ubuntu-latest
-  #   environment: staging
-  #   timeout-minutes: 15
-  #   env:
-  #     ENVIRONMENT: staging
-  #   steps:
-  #     - uses: actions/checkout@v3
+  deploy-to-s3:
+    name: Deploy to S3
+    needs: [cleanup, check-for-web-folder-changes]
+    if: needs.check-for-web-folder-changes.outputs.package_changed == 'true'
+    runs-on: ubuntu-latest
+    environment: staging
+    timeout-minutes: 15
+    env:
+      ENVIRONMENT: staging
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         cache: npm
-  #         node-version: 18
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 18
 
-  #     - name: Configure AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-  #     - name: Fetch environment variables and create .env in web folder
-  #       run: |
-  #         echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> web/.env
-  #         echo "VITE_GITHUB_CLIENT_ID=${{ secrets.VITE_GITHUB_CLIENT_ID }}" >> web/.env
-  #         echo "VITE_CLIENT_URL=${{ secrets.VITE_CLIENT_URL }}" >> web/.env
+      - name: Fetch environment variables and create .env in web folder
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> web/.env
+          echo "VITE_GITHUB_CLIENT_ID=${{ secrets.VITE_GITHUB_CLIENT_ID }}" >> web/.env
+          echo "VITE_CLIENT_URL=${{ secrets.VITE_CLIENT_URL }}" >> web/.env
 
-  #     - name: Set execute permissions for deploy script
-  #       run: chmod +x scripts/deploy_to_s3.sh
-  #     - name: Deploy to S3
-  #       shell: bash
-  #       run: |
-  #         cd scripts && ./deploy_to_s3.sh --bucket-name ${{ secrets.WEBSITE_BUCKET_NAME }} --environment ${{ env.ENVIRONMENT }}
+      - name: Set execute permissions for deploy script
+        run: chmod +x scripts/deploy_to_s3.sh
+      - name: Deploy to S3
+        shell: bash
+        run: |
+          cd scripts && ./deploy_to_s3.sh --bucket-name ${{ secrets.WEBSITE_BUCKET_NAME }} --environment ${{ env.ENVIRONMENT }}
 
   create-release-web:
     name: Create Release (web)
