--- a/lambdas/authentication/package.json
+++ b/lambdas/authentication/package.json
@@ -20,6 +20,7 @@
     "conventional-changelog-cli": "^4.1.0",
     "conventional-changelog-custom-config": "^0.3.1",
     "semantic-release": "^22.0.12",
+    "semantic-release-monorepo": "^7.0.5",
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-python-requirements": "^6.0.1"
   }
