--- a/lambdas/checklist/.releaserc.json
+++ b/lambdas/checklist/.releaserc.json
@@ -1,4 +1,5 @@
 {
+  "extends": "semantic-release-monorepo",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -20,12 +21,6 @@
         {
           "npmPublish": false
         }
-    ],
-    [
-      "@semantic-release/exec",
-      {
-        "generateNotesCmd": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -k ./changelog.config.js"
-      }
     ],
     "@semantic-release/git",
     "@semantic-release/github"
