--- a/lambdas/position/package.json
+++ b/lambdas/position/package.json
@@ -21,6 +21,7 @@
     "@semantic-release/exec": "^6.0.3",
     "conventional-changelog-cli": "^4.1.0",
     "conventional-changelog-custom-config": "^0.3.1",
-    "semantic-release": "^22.0.12"
+    "semantic-release": "^22.0.12",
+    "semantic-release-monorepo": "^7.0.5"
   }
 }
