--- a/web/package.json
+++ b/web/package.json
@@ -79,6 +79,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "semantic-release": "^22.0.12",
+    "semantic-release-monorepo": "^7.0.5",
     "storybook": "^7.6.6",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
