chore: temporarily disabling some jobs to deploy staging

--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -18,24 +18,24 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           onlyRemoveDeployments: true
 
-  check-for-web-folder-changes:
-    name: Check for changes in web
-    runs-on: ubuntu-latest
-    outputs:
-      package_changed: ${{ steps.changes.outputs.package }}
-    steps:
-      - uses: actions/checkout@v3
+  # check-for-web-folder-changes:
+  #   name: Check for changes in web
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     package_changed: ${{ steps.changes.outputs.package }}
+  #   steps:
+  #     - uses: actions/checkout@v3
 
-      - uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            package:
-              - 'web/**'
+  #     - uses: dorny/paths-filter@v2
+  #       id: changes
+  #       with:
+  #         filters: |
+  #           package:
+  #             - 'web/**'
 
   deploy-to-s3:
     name: Deploy to S3
-    needs: [cleanup, check-for-web-folder-changes]
+    needs: [cleanup]
     if: needs.check-for-web-folder-changes.outputs.package_changed == 'true'
     uses: ./.github/workflows/job-deploy-to-s3.yml
     with:
