--- a/.github/workflows/push-staging.yml
+++ b/.github/workflows/push-staging.yml
@@ -39,6 +39,7 @@ jobs:
     uses: ./.github/workflows/job-deploy-to-s3.yml
     with:
       environment: staging
+    secrets: inherit
 
   # create-release-web:
   #   name: Create Release (web)
