feat(web): add google login button

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,3 +1,4 @@
 VITE_API_URL=https://XXXXXXXXXX.execute-api.us-east-1.amazonaws.com/dev
 VITE_GITHUB_CLIENT_ID=XXXXXXXXXXXXXXXXXXXX
+VITE_GOOGLE_CLIENT_ID=XXXXXXXXXXXXXXXXXXXX
 VITE_CLIENT_URL=https://XXXXXXXXXXXXXXXX
