--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -10,6 +10,40 @@ on:
       - synchronize
 
 jobs:
+  plan-infrastructure:
+    name: Terraform
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Plan
+        id: plan
+        run: |
+          set +e
+          OUTPUT=$(terraform plan -no-color)
+          echo "::set-output name=plan::$OUTPUT"
+          set -e
+
+      - name: Comment PR
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            const output = `${{ steps.plan.outputs.plan }}`
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '```terraform\n' + output + '\n```'
+            })
+
   automated-tests:
     name: Automated Tests
     runs-on: ubuntu-latest
