--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -10,7 +10,7 @@ on:
       - synchronize
 
 jobs:
-  plan-infrastructure:
+  plan-shared-infrastructure:
     name: Terraform
     runs-on: ubuntu-latest
     steps:
@@ -22,6 +22,43 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform/shared
+
+      - name: Terraform Plan
+        id: plan
+        run: |
+          set +e
+          terraform plan -no-color | tee plan_output.txt
+          set -e
+
+      - name: Comment PR
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const output = fs.readFileSync('plan_output.txt', 'utf8');
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '```terraform\n' + output + '\n```'
+            })
+
+  plan-environment-infrastructure:
+    name: Terraform
+    runs-on: ubuntu-latest
+    needs: [plan-shared-infrastructure]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: terraform/environment
 
       - name: Select Workspace
         run: terraform workspace select staging
