--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   plan-shared-infrastructure:
-    name: Terraform
+    name: Plan Shared Infrastructure
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -53,7 +53,7 @@ jobs:
             })
 
   plan-environment-infrastructure:
-    name: Terraform
+    name: Plan Environment Infrastructure
     runs-on: ubuntu-latest
     needs: [plan-shared-infrastructure]
     steps:
@@ -75,7 +75,10 @@ jobs:
         working-directory: terraform/environment
 
       - name: Select Workspace
-        run: terraform workspace select staging
+        run: |
+          set +e
+          terraform workspace select staging || terraform workspace new staging
+          set -e
 
       - name: Terraform Plan
         id: plan
