--- a/lambdas/position/serverless.yml
+++ b/lambdas/position/serverless.yml
@@ -58,6 +58,29 @@ functions:
                 id: true
     timeout: 30
 
+  create:
+    name: ${self:provider.stage}-position-create
+    image:
+      name: default
+      command:
+        - create.handler
+    events:
+      - http:
+          path: /positions
+          method: POST
+          cors:
+            origins:
+              - https://www.matchyaa.com
+              - https://matchyaa.com
+              - http://127.0.0.1:5173
+            allowCredentials: true
+          authorizer:
+            type: request
+            identitySource: method.request.header.Cookie
+            resultTtlInSeconds: 300
+            name: ${self:provider.stage}-position-create-authorizer
+            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+
   checklist-status:
     name: ${self:provider.stage}-position-checklist-status
     image:
